--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h2>Roman Numeral Converter</h2>
     <form id="original-text">
       <div class="form-group">
-        <p>Input a number to find the Roman numeral:</p>
-        <textarea id="text-passage" name="text-passage" class="form-control"></textarea>
+        <label for="numeral">Enter  a Number:</label>
+        <input id="numeral" class="form-control" type="number" required>
         <br>
         <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
-    <p>Roman Numeral: <span id=""></span></p>
+    <p>Roman Numeral: <span id="results"></span></p>
   </div>
   </div>
 </body>
